# Solana-Security-Refrence

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEEP_DIVE.md  FIXES_SUMMARY.md  LICENSE  README.md  documentation_review_report.md  package-lock.json  package.json  simple-test.js  test-runner.js  tsconfig.json  validation_report.md
.github/workflows/: test.yml
.kiro/specs/solana-security-reference/: design.md  requirements.md  tasks.md
01_missing_account_validation/: Anchor.toml  EXPLOIT.md  README.md  package.json  tsconfig.json
01_missing_account_validation/programs/vault/: Cargo.toml
01_missing_account_validation/tests/: exploit.test.ts
02_authority_check_failure/: Anchor.toml  EXPLOIT.md  README.md
02_authority_check_failure/programs/admin_vault/: Cargo.toml
02_authority_check_failure/tests/: exploit.test.ts
03_unsafe_cpi/: Anchor.toml  EXPLOIT.md  README.md
03_unsafe_cpi/programs/unsafe_cpi/: Cargo.toml
03_unsafe_cpi/programs/unsafe_cpi/src/: lib.rs
03_unsafe_cpi/tests/: exploit.test.ts
04_arithmetic_overflow/: Anchor.toml  EXPLOIT.md  README.md
04_arithmetic_overflow/programs/arithmetic_vault/: Cargo.toml
04_arithmetic_overflow/tests/: exploit.test.ts
05_reinitialization_attack/: Anchor.toml  EXPLOIT.md  README.md  package.json
05_reinitialization_attack/programs/reinit_vault/: Cargo.toml
05_reinitialization_attack/tests/: exploit.test.ts
bonus_pinocchio_comparison/: FRAMEWORK_COMPARISON.md  README.md  package.json
bonus_pinocchio_comparison/tests/: comparison.test.ts
templates/: EXPLOIT_template.md  README_template.md
(+6 files in other folders)
