[workspace]
members = [
    "01_missing_account_validation/programs/vault",
    "02_authority_check_failure/programs/vault", 
    "03_unsafe_cpi/programs/vault",
    "04_arithmetic_overflow/programs/vault",
    "05_reinitialization_attack/programs/vault",
    "bonus_pinocchio_comparison/programs/vault"
]

[workspace.dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1